--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Tailwind CSS via CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- (Optional) Your custom overrides -->
-  <link rel="stylesheet" href="css/custom.css" />
+  <link rel="stylesheet" href="custom.css" />
 </head>
 <body class="bg-gray-50 text-gray-800 relative">
 
@@ -165,7 +165,7 @@
         data-price="349"
         data-url="product2.html"
       >
-        <img src="images/low-perf-2.jpg" alt="Low Perf PC 2" class="w-full h-48 object-cover" />
+        <img src="one.jpg" alt="Low Perf PC 2" class="w-full h-48 object-cover" />
         <div class="p-4 flex-1 flex flex-col">
           <h3 class="font-semibold text-lg mb-2">Everyday Desktop Pro</h3>
           <p class="text-gray-600 flex-1">AMD Athlon, 8 GB RAM, 256 GB SSD</p>
